parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BETWEEN
    DQ
    IN
    NOT
    SQ

Grammar

Rule 0     S' -> start
Rule 1     start -> statements_list
Rule 2     start -> configs ; statements_list
Rule 3     configs -> config
Rule 4     configs -> configs ; config
Rule 5     config -> SET LOG TRUE
Rule 6     config -> SET LOG FALSE
Rule 7     config -> SET LOG PATH STRING
Rule 8     config -> SET LOG PRINT TRUE
Rule 9     config -> SET LOG PRINT FALSE
Rule 10    statements_list -> statement
Rule 11    statements_list -> statements_list ; statement
Rule 12    statement -> select_statement
Rule 13    statement -> insert_statement
Rule 14    statement -> update_statement
Rule 15    statement -> delete_statement
Rule 16    select_statement -> SELECT DISTINCT agg_columns_list FROM ds conditions group order limit offset
Rule 17    select_statement -> SELECT agg_columns_list FROM ds conditions group order limit offset
Rule 18    select_statement -> SELECT agg_columns_list INTO ds FROM ds conditions limit offset
Rule 19    select_statement -> SELECT DISTINCT agg_columns_list FROM ds joins conditions group order
Rule 20    select_statement -> SELECT agg_columns_list FROM ds joins conditions group order
Rule 21    insert_statement -> INSERT INTO ds ( columns_list ) VALUES rows
Rule 22    insert_statement -> INSERT INTO ds VALUES rows
Rule 23    insert_statement -> INSERT INTO ds ( columns_list ) select_statement
Rule 24    insert_statement -> INSERT INTO ds select_statement
Rule 25    update_statement -> UPDATE ds SET rec_set conditions
Rule 26    delete_statement -> DELETE FROM ds conditions
Rule 27    rec_set -> column = value
Rule 28    rec_set -> rec_set , column = value
Rule 29    joins -> join_type ds ON conditions
Rule 30    joins -> joins join_type ds ON conditions
Rule 31    join_type -> JOIN
Rule 32    join_type -> INNER JOIN
Rule 33    join_type -> LEFT JOIN
Rule 34    join_type -> RIGHT JOIN
Rule 35    join_type -> FULL JOIN
Rule 36    rows -> ( rec_values )
Rule 37    rows -> ( rec_values ) , rows
Rule 38    rec_values -> value
Rule 39    rec_values -> rec_values , value
Rule 40    columns_list -> *
Rule 41    columns_list -> rec_columns
Rule 42    agg_columns_list -> *
Rule 43    agg_columns_list -> agg_rec_columns
Rule 44    agg_rec_columns -> t_column
Rule 45    agg_rec_columns -> agg_rec_columns , t_column
Rule 46    rec_columns -> column
Rule 47    rec_columns -> rec_columns , column
Rule 48    t_column -> column
Rule 49    t_column -> function
Rule 50    t_column -> column AS NAME
Rule 51    t_column -> function AS NAME
Rule 52    column -> NAME
Rule 53    column -> INDEX
Rule 54    function -> function_name ( column )
Rule 55    function_name -> SUM
Rule 56    function_name -> MAX
Rule 57    function_name -> MIN
Rule 58    function_name -> COUNT
Rule 59    function_name -> AVG
Rule 60    ds -> ( select_statement )
Rule 61    ds -> ( select_statement ) AS NAME
Rule 62    ds -> src
Rule 63    ds -> src AS NAME
Rule 64    src -> NAME
Rule 65    src -> DATASOURCE
Rule 66    limit -> LIMIT NUMBER
Rule 67    limit -> empty
Rule 68    offset -> OFFSET NUMBER
Rule 69    offset -> empty
Rule 70    conditions -> WHERE rec_conditions
Rule 71    conditions -> rec_conditions
Rule 72    conditions -> empty
Rule 73    rec_conditions -> column op value
Rule 74    rec_conditions -> rec_conditions AND column op value
Rule 75    rec_conditions -> rec_conditions OR column op value
Rule 76    value -> NAME
Rule 77    value -> STRING
Rule 78    value -> FLOAT
Rule 79    value -> NUMBER
Rule 80    value -> column
Rule 81    empty -> <empty>
Rule 82    op -> >
Rule 83    op -> <
Rule 84    op -> =
Rule 85    op -> LE
Rule 86    op -> GE
Rule 87    op -> NE
Rule 88    op -> LIKE
Rule 89    group -> GROUP BY columns_list
Rule 90    group -> empty
Rule 91    order -> ORDER BY orders
Rule 92    order -> empty
Rule 93    orders -> column sort_type
Rule 94    orders -> orders , column sort_type
Rule 95    sort_type -> ASC
Rule 96    sort_type -> DESC
Rule 97    sort_type -> empty

Terminals, with rules where they appear

(                    : 21 23 36 37 54 60 61
)                    : 21 23 36 37 54 60 61
*                    : 40 42
,                    : 28 37 39 45 47 94
;                    : 2 4 11
<                    : 83
=                    : 27 28 84
>                    : 82
AND                  : 74
AS                   : 50 51 61 63
ASC                  : 95
AVG                  : 59
BETWEEN              : 
BY                   : 89 91
COUNT                : 58
DATASOURCE           : 65
DELETE               : 26
DESC                 : 96
DISTINCT             : 16 19
DQ                   : 
FALSE                : 6 9
FLOAT                : 78
FROM                 : 16 17 18 19 20 26
FULL                 : 35
GE                   : 86
GROUP                : 89
IN                   : 
INDEX                : 53
INNER                : 32
INSERT               : 21 22 23 24
INTO                 : 18 21 22 23 24
JOIN                 : 31 32 33 34 35
LE                   : 85
LEFT                 : 33
LIKE                 : 88
LIMIT                : 66
LOG                  : 5 6 7 8 9
MAX                  : 56
MIN                  : 57
NAME                 : 50 51 52 61 63 64 76
NE                   : 87
NOT                  : 
NUMBER               : 66 68 79
OFFSET               : 68
ON                   : 29 30
OR                   : 75
ORDER                : 91
PATH                 : 7
PRINT                : 8 9
RIGHT                : 34
SELECT               : 16 17 18 19 20
SET                  : 5 6 7 8 9 25
SQ                   : 
STRING               : 7 77
SUM                  : 55
TRUE                 : 5 8
UPDATE               : 25
VALUES               : 21 22
WHERE                : 70
error                : 

Nonterminals, with rules where they appear

agg_columns_list     : 16 17 18 19 20
agg_rec_columns      : 43 45
column               : 27 28 46 47 48 50 54 73 74 75 80 93 94
columns_list         : 21 23 89
conditions           : 16 17 18 19 20 25 26 29 30
config               : 3 4
configs              : 2 4
delete_statement     : 15
ds                   : 16 17 18 18 19 20 21 22 23 24 25 26 29 30
empty                : 67 69 72 90 92 97
function             : 49 51
function_name        : 54
group                : 16 17 19 20
insert_statement     : 13
join_type            : 29 30
joins                : 19 20 30
limit                : 16 17 18
offset               : 16 17 18
op                   : 73 74 75
order                : 16 17 19 20
orders               : 91 94
rec_columns          : 41 47
rec_conditions       : 70 71 74 75
rec_set              : 25 28
rec_values           : 36 37 39
rows                 : 21 22 37
select_statement     : 12 23 24 60 61
sort_type            : 93 94
src                  : 62 63
start                : 0
statement            : 10 11
statements_list      : 1 2 11
t_column             : 44 45
update_statement     : 14
value                : 27 28 38 39 73 74 75

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . statements_list
    (2) start -> . configs ; statements_list
    (10) statements_list -> . statement
    (11) statements_list -> . statements_list ; statement
    (3) configs -> . config
    (4) configs -> . configs ; config
    (12) statement -> . select_statement
    (13) statement -> . insert_statement
    (14) statement -> . update_statement
    (15) statement -> . delete_statement
    (5) config -> . SET LOG TRUE
    (6) config -> . SET LOG FALSE
    (7) config -> . SET LOG PATH STRING
    (8) config -> . SET LOG PRINT TRUE
    (9) config -> . SET LOG PRINT FALSE
    (16) select_statement -> . SELECT DISTINCT agg_columns_list FROM ds conditions group order limit offset
    (17) select_statement -> . SELECT agg_columns_list FROM ds conditions group order limit offset
    (18) select_statement -> . SELECT agg_columns_list INTO ds FROM ds conditions limit offset
    (19) select_statement -> . SELECT DISTINCT agg_columns_list FROM ds joins conditions group order
    (20) select_statement -> . SELECT agg_columns_list FROM ds joins conditions group order
    (21) insert_statement -> . INSERT INTO ds ( columns_list ) VALUES rows
    (22) insert_statement -> . INSERT INTO ds VALUES rows
    (23) insert_statement -> . INSERT INTO ds ( columns_list ) select_statement
    (24) insert_statement -> . INSERT INTO ds select_statement
    (25) update_statement -> . UPDATE ds SET rec_set conditions
    (26) delete_statement -> . DELETE FROM ds conditions

    SET             shift and go to state 10
    SELECT          shift and go to state 11
    INSERT          shift and go to state 12
    UPDATE          shift and go to state 13
    DELETE          shift and go to state 14

    start                          shift and go to state 1
    statements_list                shift and go to state 2
    configs                        shift and go to state 3
    statement                      shift and go to state 4
    config                         shift and go to state 5
    select_statement               shift and go to state 6
    insert_statement               shift and go to state 7
    update_statement               shift and go to state 8
    delete_statement               shift and go to state 9

state 1

    (0) S' -> start .



state 2

    (1) start -> statements_list .
    (11) statements_list -> statements_list . ; statement

    $end            reduce using rule 1 (start -> statements_list .)
    ;               shift and go to state 15


state 3

    (2) start -> configs . ; statements_list
    (4) configs -> configs . ; config

    ;               shift and go to state 16


state 4

    (10) statements_list -> statement .

    ;               reduce using rule 10 (statements_list -> statement .)
    $end            reduce using rule 10 (statements_list -> statement .)


state 5

    (3) configs -> config .

    ;               reduce using rule 3 (configs -> config .)


state 6

    (12) statement -> select_statement .

    ;               reduce using rule 12 (statement -> select_statement .)
    $end            reduce using rule 12 (statement -> select_statement .)


state 7

    (13) statement -> insert_statement .

    ;               reduce using rule 13 (statement -> insert_statement .)
    $end            reduce using rule 13 (statement -> insert_statement .)


state 8

    (14) statement -> update_statement .

    ;               reduce using rule 14 (statement -> update_statement .)
    $end            reduce using rule 14 (statement -> update_statement .)


state 9

    (15) statement -> delete_statement .

    ;               reduce using rule 15 (statement -> delete_statement .)
    $end            reduce using rule 15 (statement -> delete_statement .)


state 10

    (5) config -> SET . LOG TRUE
    (6) config -> SET . LOG FALSE
    (7) config -> SET . LOG PATH STRING
    (8) config -> SET . LOG PRINT TRUE
    (9) config -> SET . LOG PRINT FALSE

    LOG             shift and go to state 17


state 11

    (16) select_statement -> SELECT . DISTINCT agg_columns_list FROM ds conditions group order limit offset
    (17) select_statement -> SELECT . agg_columns_list FROM ds conditions group order limit offset
    (18) select_statement -> SELECT . agg_columns_list INTO ds FROM ds conditions limit offset
    (19) select_statement -> SELECT . DISTINCT agg_columns_list FROM ds joins conditions group order
    (20) select_statement -> SELECT . agg_columns_list FROM ds joins conditions group order
    (42) agg_columns_list -> . *
    (43) agg_columns_list -> . agg_rec_columns
    (44) agg_rec_columns -> . t_column
    (45) agg_rec_columns -> . agg_rec_columns , t_column
    (48) t_column -> . column
    (49) t_column -> . function
    (50) t_column -> . column AS NAME
    (51) t_column -> . function AS NAME
    (52) column -> . NAME
    (53) column -> . INDEX
    (54) function -> . function_name ( column )
    (55) function_name -> . SUM
    (56) function_name -> . MAX
    (57) function_name -> . MIN
    (58) function_name -> . COUNT
    (59) function_name -> . AVG

    DISTINCT        shift and go to state 18
    *               shift and go to state 20
    NAME            shift and go to state 25
    INDEX           shift and go to state 26
    SUM             shift and go to state 28
    MAX             shift and go to state 29
    MIN             shift and go to state 30
    COUNT           shift and go to state 31
    AVG             shift and go to state 32

    agg_columns_list               shift and go to state 19
    agg_rec_columns                shift and go to state 21
    t_column                       shift and go to state 22
    column                         shift and go to state 23
    function                       shift and go to state 24
    function_name                  shift and go to state 27

state 12

    (21) insert_statement -> INSERT . INTO ds ( columns_list ) VALUES rows
    (22) insert_statement -> INSERT . INTO ds VALUES rows
    (23) insert_statement -> INSERT . INTO ds ( columns_list ) select_statement
    (24) insert_statement -> INSERT . INTO ds select_statement

    INTO            shift and go to state 33


state 13

    (25) update_statement -> UPDATE . ds SET rec_set conditions
    (60) ds -> . ( select_statement )
    (61) ds -> . ( select_statement ) AS NAME
    (62) ds -> . src
    (63) ds -> . src AS NAME
    (64) src -> . NAME
    (65) src -> . DATASOURCE

    (               shift and go to state 35
    NAME            shift and go to state 36
    DATASOURCE      shift and go to state 38

    ds                             shift and go to state 34
    src                            shift and go to state 37

state 14

    (26) delete_statement -> DELETE . FROM ds conditions

    FROM            shift and go to state 39


state 15

    (11) statements_list -> statements_list ; . statement
    (12) statement -> . select_statement
    (13) statement -> . insert_statement
    (14) statement -> . update_statement
    (15) statement -> . delete_statement
    (16) select_statement -> . SELECT DISTINCT agg_columns_list FROM ds conditions group order limit offset
    (17) select_statement -> . SELECT agg_columns_list FROM ds conditions group order limit offset
    (18) select_statement -> . SELECT agg_columns_list INTO ds FROM ds conditions limit offset
    (19) select_statement -> . SELECT DISTINCT agg_columns_list FROM ds joins conditions group order
    (20) select_statement -> . SELECT agg_columns_list FROM ds joins conditions group order
    (21) insert_statement -> . INSERT INTO ds ( columns_list ) VALUES rows
    (22) insert_statement -> . INSERT INTO ds VALUES rows
    (23) insert_statement -> . INSERT INTO ds ( columns_list ) select_statement
    (24) insert_statement -> . INSERT INTO ds select_statement
    (25) update_statement -> . UPDATE ds SET rec_set conditions
    (26) delete_statement -> . DELETE FROM ds conditions

    SELECT          shift and go to state 11
    INSERT          shift and go to state 12
    UPDATE          shift and go to state 13
    DELETE          shift and go to state 14

    statement                      shift and go to state 40
    select_statement               shift and go to state 6
    insert_statement               shift and go to state 7
    update_statement               shift and go to state 8
    delete_statement               shift and go to state 9

state 16

    (2) start -> configs ; . statements_list
    (4) configs -> configs ; . config
    (10) statements_list -> . statement
    (11) statements_list -> . statements_list ; statement
    (5) config -> . SET LOG TRUE
    (6) config -> . SET LOG FALSE
    (7) config -> . SET LOG PATH STRING
    (8) config -> . SET LOG PRINT TRUE
    (9) config -> . SET LOG PRINT FALSE
    (12) statement -> . select_statement
    (13) statement -> . insert_statement
    (14) statement -> . update_statement
    (15) statement -> . delete_statement
    (16) select_statement -> . SELECT DISTINCT agg_columns_list FROM ds conditions group order limit offset
    (17) select_statement -> . SELECT agg_columns_list FROM ds conditions group order limit offset
    (18) select_statement -> . SELECT agg_columns_list INTO ds FROM ds conditions limit offset
    (19) select_statement -> . SELECT DISTINCT agg_columns_list FROM ds joins conditions group order
    (20) select_statement -> . SELECT agg_columns_list FROM ds joins conditions group order
    (21) insert_statement -> . INSERT INTO ds ( columns_list ) VALUES rows
    (22) insert_statement -> . INSERT INTO ds VALUES rows
    (23) insert_statement -> . INSERT INTO ds ( columns_list ) select_statement
    (24) insert_statement -> . INSERT INTO ds select_statement
    (25) update_statement -> . UPDATE ds SET rec_set conditions
    (26) delete_statement -> . DELETE FROM ds conditions

    SET             shift and go to state 10
    SELECT          shift and go to state 11
    INSERT          shift and go to state 12
    UPDATE          shift and go to state 13
    DELETE          shift and go to state 14

    statements_list                shift and go to state 41
    config                         shift and go to state 42
    statement                      shift and go to state 4
    select_statement               shift and go to state 6
    insert_statement               shift and go to state 7
    update_statement               shift and go to state 8
    delete_statement               shift and go to state 9

state 17

    (5) config -> SET LOG . TRUE
    (6) config -> SET LOG . FALSE
    (7) config -> SET LOG . PATH STRING
    (8) config -> SET LOG . PRINT TRUE
    (9) config -> SET LOG . PRINT FALSE

    TRUE            shift and go to state 43
    FALSE           shift and go to state 44
    PATH            shift and go to state 45
    PRINT           shift and go to state 46


state 18

    (16) select_statement -> SELECT DISTINCT . agg_columns_list FROM ds conditions group order limit offset
    (19) select_statement -> SELECT DISTINCT . agg_columns_list FROM ds joins conditions group order
    (42) agg_columns_list -> . *
    (43) agg_columns_list -> . agg_rec_columns
    (44) agg_rec_columns -> . t_column
    (45) agg_rec_columns -> . agg_rec_columns , t_column
    (48) t_column -> . column
    (49) t_column -> . function
    (50) t_column -> . column AS NAME
    (51) t_column -> . function AS NAME
    (52) column -> . NAME
    (53) column -> . INDEX
    (54) function -> . function_name ( column )
    (55) function_name -> . SUM
    (56) function_name -> . MAX
    (57) function_name -> . MIN
    (58) function_name -> . COUNT
    (59) function_name -> . AVG

    *               shift and go to state 20
    NAME            shift and go to state 25
    INDEX           shift and go to state 26
    SUM             shift and go to state 28
    MAX             shift and go to state 29
    MIN             shift and go to state 30
    COUNT           shift and go to state 31
    AVG             shift and go to state 32

    agg_columns_list               shift and go to state 47
    agg_rec_columns                shift and go to state 21
    t_column                       shift and go to state 22
    column                         shift and go to state 23
    function                       shift and go to state 24
    function_name                  shift and go to state 27

state 19

    (17) select_statement -> SELECT agg_columns_list . FROM ds conditions group order limit offset
    (18) select_statement -> SELECT agg_columns_list . INTO ds FROM ds conditions limit offset
    (20) select_statement -> SELECT agg_columns_list . FROM ds joins conditions group order

    FROM            shift and go to state 48
    INTO            shift and go to state 49


state 20

    (42) agg_columns_list -> * .

    FROM            reduce using rule 42 (agg_columns_list -> * .)
    INTO            reduce using rule 42 (agg_columns_list -> * .)


state 21

    (43) agg_columns_list -> agg_rec_columns .
    (45) agg_rec_columns -> agg_rec_columns . , t_column

    FROM            reduce using rule 43 (agg_columns_list -> agg_rec_columns .)
    INTO            reduce using rule 43 (agg_columns_list -> agg_rec_columns .)
    ,               shift and go to state 50


state 22

    (44) agg_rec_columns -> t_column .

    ,               reduce using rule 44 (agg_rec_columns -> t_column .)
    FROM            reduce using rule 44 (agg_rec_columns -> t_column .)
    INTO            reduce using rule 44 (agg_rec_columns -> t_column .)


state 23

    (48) t_column -> column .
    (50) t_column -> column . AS NAME

    ,               reduce using rule 48 (t_column -> column .)
    FROM            reduce using rule 48 (t_column -> column .)
    INTO            reduce using rule 48 (t_column -> column .)
    AS              shift and go to state 51


state 24

    (49) t_column -> function .
    (51) t_column -> function . AS NAME

    ,               reduce using rule 49 (t_column -> function .)
    FROM            reduce using rule 49 (t_column -> function .)
    INTO            reduce using rule 49 (t_column -> function .)
    AS              shift and go to state 52


state 25

    (52) column -> NAME .

    AS              reduce using rule 52 (column -> NAME .)
    ,               reduce using rule 52 (column -> NAME .)
    FROM            reduce using rule 52 (column -> NAME .)
    INTO            reduce using rule 52 (column -> NAME .)
    )               reduce using rule 52 (column -> NAME .)
    =               reduce using rule 52 (column -> NAME .)
    >               reduce using rule 52 (column -> NAME .)
    <               reduce using rule 52 (column -> NAME .)
    LE              reduce using rule 52 (column -> NAME .)
    GE              reduce using rule 52 (column -> NAME .)
    NE              reduce using rule 52 (column -> NAME .)
    LIKE            reduce using rule 52 (column -> NAME .)
    ORDER           reduce using rule 52 (column -> NAME .)
    LIMIT           reduce using rule 52 (column -> NAME .)
    OFFSET          reduce using rule 52 (column -> NAME .)
    ;               reduce using rule 52 (column -> NAME .)
    $end            reduce using rule 52 (column -> NAME .)
    ASC             reduce using rule 52 (column -> NAME .)
    DESC            reduce using rule 52 (column -> NAME .)


state 26

    (53) column -> INDEX .

    AS              reduce using rule 53 (column -> INDEX .)
    ,               reduce using rule 53 (column -> INDEX .)
    FROM            reduce using rule 53 (column -> INDEX .)
    INTO            reduce using rule 53 (column -> INDEX .)
    )               reduce using rule 53 (column -> INDEX .)
    =               reduce using rule 53 (column -> INDEX .)
    >               reduce using rule 53 (column -> INDEX .)
    <               reduce using rule 53 (column -> INDEX .)
    LE              reduce using rule 53 (column -> INDEX .)
    GE              reduce using rule 53 (column -> INDEX .)
    NE              reduce using rule 53 (column -> INDEX .)
    LIKE            reduce using rule 53 (column -> INDEX .)
    WHERE           reduce using rule 53 (column -> INDEX .)
    NAME            reduce using rule 53 (column -> INDEX .)
    INDEX           reduce using rule 53 (column -> INDEX .)
    ;               reduce using rule 53 (column -> INDEX .)
    $end            reduce using rule 53 (column -> INDEX .)
    AND             reduce using rule 53 (column -> INDEX .)
    OR              reduce using rule 53 (column -> INDEX .)
    GROUP           reduce using rule 53 (column -> INDEX .)
    ORDER           reduce using rule 53 (column -> INDEX .)
    LIMIT           reduce using rule 53 (column -> INDEX .)
    OFFSET          reduce using rule 53 (column -> INDEX .)
    JOIN            reduce using rule 53 (column -> INDEX .)
    INNER           reduce using rule 53 (column -> INDEX .)
    LEFT            reduce using rule 53 (column -> INDEX .)
    RIGHT           reduce using rule 53 (column -> INDEX .)
    FULL            reduce using rule 53 (column -> INDEX .)
    ASC             reduce using rule 53 (column -> INDEX .)
    DESC            reduce using rule 53 (column -> INDEX .)


state 27

    (54) function -> function_name . ( column )

    (               shift and go to state 53


state 28

    (55) function_name -> SUM .

    (               reduce using rule 55 (function_name -> SUM .)


state 29

    (56) function_name -> MAX .

    (               reduce using rule 56 (function_name -> MAX .)


state 30

    (57) function_name -> MIN .

    (               reduce using rule 57 (function_name -> MIN .)


state 31

    (58) function_name -> COUNT .

    (               reduce using rule 58 (function_name -> COUNT .)


state 32
